# carrot

./: main.py
client/: README.md  package-lock.json  package.json
client/.next/: trace
client/.next/cache/webpack/client-development/: index.pack.gz.old
client/.next/server/pages/: index.js
client/.next/server/vendor-chunks/: @swc.js
client/.next/static/chunks/: webpack.js
client/.next/static/webpack/: webpack.5d7a8250cc2c62a3.hot-update.js  webpack.8c52b19072f381e4.hot-update.js  webpack.f86930bd5ad0069a.hot-update.js
client/app/: layout.tsx  page.tsx
client/app/api/generate/: route.ts
client/app/start/[id]/: page.tsx
client/app/waitlist/: page.tsx
client/components/: Body.tsx  CTA.tsx  ContentSuggestionProps.tsx  Footer.tsx  GoogleAnalytics.js  Hero.tsx  NavLink.tsx  Navbar.tsx  ResultProps.tsx
client/components/ui/: loadingdots.tsx
client/pages/: index.js
client/utils/: StoreNewsService.ts  service.ts  types.ts
server/: pyproject.toml  requirements.txt
server/carrot/: manage.py
server/carrot/carrot/: asgi.py  settings.py  urls.py  wsgi.py
server/carrot/carrot_ai/: apps.py  views.py
server/config/: settings.py  urls.py  wsgi.py
server/genai/: apps.py  models.py  prompts.py  serializers.py  urls.py  views.py
server/genai/migrations/: 0001_initial.py
server/news/: models.py  serializers.py  urls.py  views.py
server/news/migrations/: 0001_initial.py  0002_initial.py
server/run/: gunicorn.service
server/users/: models.py  serializers.py  urls.py  views.py
server/users/migrations/: 0001_initial.py
(+5 files in other folders)
