[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["짱짱맨 <60203153+kksjjm@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"
pillow = "^10.0.1"
openai = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
